--- a/requirements.txt
+++ b/requirements.txt
@@ -4,31 +4,13 @@ coloredlogs
 beautifulsoup4
 argparse
 python-dotenv
-praw
-asyncpraw
 requests>2.28.1
 emoji
-pillow
-pyowm
-sympy
-imageio
-colorthief
 aiohttp
-matplotlib
-astral
-pytz
-funcy
-pycaw
-pint
 tabulate
 EdgeGPT
-BingImageCreator-fork
+BingImageCreator
 snakeviz
 alt-profanity-check
-
-moviepy
-moviepy[optional]
-pygame
-
-onnxruntime-gpu
-rembg[gpu]
+pillow
+log2d
